--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-twitter-widgets": "^1.7.1"
   },
   "devDependencies": {
+    "@dschau/create-gatsby-blog-post": "^1.1.0",
     "cli-glob": "^0.1.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -64,12 +65,13 @@
     "serve": "gatsby serve",
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
-    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public gh-page",
+    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
     "clean": "rm -rf public",
     "lint:js": "eslint --ext .js,.jsx .",
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
-    "format:js": "prettier '**/*.{js,jsx}' --write"
+    "format:js": "prettier '**/*.{js,jsx}' --write",
+     "new": "create-post -- --date-format 'YYYY-MM-DD'"
   },
   "remarkConfig": {
     "plugins": [
