--- a/package.json
+++ b/package.json
@@ -4,39 +4,43 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
-    "babel-plugin-lodash": "^3.3.2",
+    "gatsby-plugin-lodash": "3.0.1",
     "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.149",
-    "gatsby-link": "^1.6.32",
-    "gatsby-plugin-catch-links": "^1.0.14",
-    "gatsby-plugin-feed": "^1.3.15",
-    "gatsby-plugin-google-analytics": "^1.0.14",
-    "gatsby-plugin-manifest": "^1.0.12",
-    "gatsby-plugin-nprogress": "^1.0.9",
-    "gatsby-plugin-offline": "^1.0.12",
-    "gatsby-plugin-react-helmet": "^2.0.3",
-    "gatsby-plugin-sass": "^1.0.15",
-    "gatsby-plugin-sharp": "^1.6.24",
-    "gatsby-plugin-sitemap": "^1.2.9",
-    "gatsby-plugin-twitter": "^1.0.14",
-    "gatsby-remark-autolink-headers": "^1.4.11",
-    "gatsby-remark-copy-linked-files": "^1.5.25",
-    "gatsby-remark-images": "^1.5.36",
-    "gatsby-remark-prismjs": "^2.0.3",
-    "gatsby-remark-responsive-iframe": "^1.4.16",
-    "gatsby-source-filesystem": "^1.5.11",
-    "gatsby-transformer-remark": "^1.7.43",
-    "gatsby-transformer-sharp": "^1.6.16",
-    "lodash": "^4.17.4",
-    "lodash-webpack-plugin": "^0.11.4",
-    "prismjs": "^1.14.0",
+    "gatsby": "2.0.0",
+    "gatsby-image": "2.0.0",
+    "gatsby-plugin-catch-links": "2.0.2",
+    "gatsby-plugin-feed": "2.0.5",
+    "gatsby-plugin-google-analytics": "2.0.5",
+    "gatsby-plugin-lodash": "3.0.1",
+    "gatsby-plugin-manifest": "2.0.2",
+    "gatsby-plugin-netlify-cms": "3.0.0",
+    "gatsby-plugin-nprogress": "2.0.5",
+    "gatsby-plugin-offline": "2.0.5",
+    "gatsby-plugin-react-helmet": "3.0.0",
+    "gatsby-plugin-sass": "2.0.1",
+    "gatsby-plugin-sharp": "2.0.5",
+    "gatsby-plugin-sitemap": "2.0.1",
+    "gatsby-plugin-twitter": "2.0.5",
+    "gatsby-remark-autolink-headers": "2.0.5",
+    "gatsby-remark-copy-linked-files": "2.0.5",
+    "gatsby-remark-images": "2.0.1",
+    "gatsby-remark-prismjs": "2.0.5",
+    "gatsby-remark-relative-images": "0.1.2",
+    "gatsby-remark-responsive-iframe": "2.0.5",
+    "gatsby-source-filesystem": "2.0.1",
+    "gatsby-transformer-remark": "2.1.1",
+    "gatsby-transformer-sharp": "2.1.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "netlify-cms": "2.1.1",
     "react": "^16.3.1",
     "react-disqus-comments": "^1.1.1",
     "react-dom": "^16.3.1",
     "react-helmet": "^5.2.0",
     "react-md": "^1.2.9",
     "react-share": "^2.1.0",
-    "react-twitter-widgets": "^1.7.1"
+    "react-twitter-widgets": "^1.7.1",
+    "url-join": "^4.0.0"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
