update to gatsbyv2

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "gatsby-plugin-google-analytics": "2.0.5",
     "gatsby-plugin-lodash": "3.0.1",
     "gatsby-plugin-manifest": "2.0.2",
-    "gatsby-plugin-netlify-cms": "3.0.0",
     "gatsby-plugin-nprogress": "2.0.5",
     "gatsby-plugin-offline": "2.0.5",
     "gatsby-plugin-react-helmet": "3.0.0",
@@ -32,7 +31,8 @@
     "gatsby-transformer-sharp": "2.1.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "netlify-cms": "2.1.1",
+    "node-sass": "^4.9.2",
+    "prismjs": "^1.15.0",
     "react": "^16.3.1",
     "react-disqus-comments": "^1.1.1",
     "react-dom": "^16.3.1",
@@ -54,7 +54,7 @@
     "prettier": "^1.9.2",
     "remark-cli": "^5.0.0",
     "remark-preset-lint-recommended": "^3.0.1",
-    "stylefmt": "^6.0.2",
+    "stylefmt": "^6.0.0",
     "stylelint": "^9.2.0",
     "stylelint-config-standard": "^18.0.0",
     "textlint": "^10.2.1",
