--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "description": "GatsbyJS Material Blog theme.",
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "scripts": {
+    "develop": "gatsby develop",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "build": "gatsby build",
+    "build:pp": "gatsby build --prefix-paths",
+    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
+    "clean": "rm -rf public && rm -rf .cache",
+    "lint:js": "eslint --ext .js,.jsx .",
+    "lint:md": "remark content/",
+    "lint:ja": "textlint content/",
+    "write-good": "write-good $(glob 'content/**/*.md')",
+    "format:js": "prettier '**/*.{js,jsx}' --write"
+  },
   "dependencies": {
     "gatsby-plugin-lodash": "3.0.1",
     "font-awesome": "^4.7.0",
@@ -69,20 +83,6 @@
   ],
   "license": "MIT",
   "main": "n/a",
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "build": "gatsby build",
-    "build:pp": "gatsby build --prefix-paths",
-    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
-    "clean": "rm -rf public",
-    "lint:js": "eslint --ext .js,.jsx .",
-    "lint:md": "remark content/posts/",
-    "lint:ja": "textlint ./content/posts/",
-    "write-good": "write-good $(glob 'content/posts/**/*.md')",
-    "format:js": "prettier '**/*.{js,jsx}' --write"
-  },
   "remarkConfig": {
     "plugins": [
       "remark-preset-lint-recommended"
