--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
   publish = "public"
-  command = "yarn run build"
+  command = "yarn run build && yarn build:gh"
 [build.environment]
   YARN_VERSION = "1.7.0"
