--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "format:js": "prettier '**/*.{js,jsx}' --write"
   },
   "dependencies": {
-    "gatsby-plugin-lodash": "3.0.1",
     "font-awesome": "^4.7.0",
     "gatsby": "2.0.0",
     "gatsby-image": "2.0.0",
@@ -45,17 +44,17 @@
     "gatsby-transformer-sharp": "2.1.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "netlify-cms": "2.1.1",
     "node-sass": "^4.9.2",
     "prismjs": "^1.15.0",
     "react": "^16.3.1",
     "react-disqus-comments": "^1.1.1",
     "react-dom": "^16.3.1",
     "react-helmet": "^5.2.0",
-    "react-md": "^1.2.9",
+    "react-md": "^1.7.1",
     "react-share": "^2.1.0",
     "react-twitter-widgets": "^1.7.1",
-    "url-join": "^4.0.0",
-    "netlify-cms": "2.1.1"
+    "url-join": "^4.0.0"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
